--- a/add-on_project.html
+++ b/add-on_project.html
@@ -10,7 +10,9 @@
     <h1>World Clocks</h1>
     <footer>
       This project was coded by Déborah Laport and is
-      <a href="#" target="_blank">open-sourced on GitHub</a>
+      <a href="https://github.com/DeborahShaenice/world-clocks" target="_blank"
+        >open-sourced on GitHub</a
+      >
     </footer>
     <script src="src/index.js"></script>
   </body>
